--- a/config/database.yml
+++ b/config/database.yml
@@ -1,32 +1,34 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
+source 'https://rubygems.org'
 
+  git_source(:github) do |repo_name|
+    repo_name = "#{repo_name}/#{repo_name}" unless repo_name.include?("/")
+    "https://github.com/#{repo_name}.git"
+  end
 
+  gem 'rails', '~> 5.0.1'
+  gem 'puma', '~> 3.0'
+  gem 'sass-rails', '~> 5.0'
+  gem 'uglifier', '>= 1.3.0'
+  gem 'coffee-rails', '~> 4.2'
+  gem 'jquery-rails'
+  gem 'turbolinks', '~> 5'
+  gem 'jbuilder', '~> 2.5'
 
+  group :development, :test do
+    gem 'byebug', platform: :mri
+    gem 'sqlite3'
+  end
 
-default: &default
-  adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  group :production do
+    gem 'pg'
+  end
 
-development:
-  <<: *default
-  adapter: postgresql
+  group :development do
+    gem 'web-console', '>= 3.3.0'
+    gem 'listen', '~> 3.0.5'
+    gem 'spring'
+    gem 'spring-watcher-listen', '~> 2.0.0'
+  end
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  adapter: postgresql
-  encoding: Unicode
-
-production:
-  adapter: postgresql
-  encoding: Unicode
-
-
+  # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
+  gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
