--- a/package.json
+++ b/package.json
@@ -3,5 +3,26 @@
   "private": true,
   "dependencies": {
     "bulma": "^0.7.1"
-  }
+  },
+  "description": "ALPHA Camp Demo Day 2 Project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/revichung/just-dessert2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/revichung/just-dessert2/issues"
+  },
+  "homepage": "https://github.com/revichung/just-dessert2#readme"
 }
