--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "just-dessert2",
   "private": true,
   "dependencies": {
-    "bulma": "^0.7.1"
+    "bulma": "^0.7.1",
+    "modernizr": "3.6.0"
   },
   "description": "ALPHA Camp Demo Day 2 Project",
   "version": "1.0.0",
